--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,8 +3,8 @@ body {
     
 
 }
-#info {width:160px; border:thin solid silver; padding:.5em; position:fixed;}
-#info h1 {margin: 0;}
+#info {width:100px; border:solid; padding:0.4em;}
+
 
 a {
     font-weight: 700;
@@ -16,4 +16,13 @@ h4 {
     margin: 0;
     padding: 0;
     color:cadetblue
+}
+
+#numero {
+    border: solid;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
